--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "scripts": {
     "start:development": "NODE_ENV=development webpack-dev-server --env.development",
+    "compile:development": "NODE_ENV=development webpack --env.development",
     "compile:production": "NODE_ENV=production webpack --env.production",
     "build": "npm run compile:production -s && npm run minify -s",
     "analyze": "NODE_ENV=analyze webpack --env.analyze",
