--- a/.eslintrc
+++ b/.eslintrc
@@ -91,7 +91,7 @@
     "no-trailing-spaces": "error",
     "no-throw-literal": "error",
     "no-undef-init": "error",
-    "no-undefined": "error",
+    "no-undefined": "off",
     "no-underscore-dangle": "error",
     "no-unmodified-loop-condition": "error",
     "no-unneeded-ternary": "error",
