--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^15.4.1",
     "react-helmet": "^3.3.0",
     "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
+    "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
@@ -41,6 +41,7 @@
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
     "postcss-loader": "^1.2.1",
+    "progress-bar-webpack-plugin": "^1.9.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
@@ -51,11 +52,11 @@
     "webpack-notifier": "^1.5.0"
   },
   "scripts": {
-    "start:development": "NODE_ENV=development webpack-dev-server --env.development",
+    "start:development": "NODE_ENV=development webpack-dev-server --hot --env.development",
     "compile:development": "NODE_ENV=development webpack --env.development",
     "compile:production": "NODE_ENV=production webpack --env.production",
     "build": "npm run compile:production -s && npm run minify -s",
-    "analyze": "NODE_ENV=analyze webpack --env.analyze",
+    "analyze": "NODE_ENV=production webpack --env.analyze",
     "minify": "babili dist -d dist --no-comments"
   },
   "engines": {
