--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "sunstorymvp",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.4",
     "normalize.css": "^5.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -14,6 +15,7 @@
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-actions": "^1.2.0",
     "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
@@ -37,6 +39,7 @@
     "extract-text-webpack-plugin": "beta",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.25.0",
+    "imagemin-webpack-plugin": "^1.4.4",
     "postcss": "^5.2.8",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
