--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
+    "svg-url-loader": "^1.1.1",
     "url-loader": "^0.5.7",
     "webpack": "beta",
     "webpack-bundle-analyzer": "^2.2.1",
