add jest configuration, simple test case

--- a/.babelrc
+++ b/.babelrc
@@ -13,5 +13,13 @@
         ]
       }
     } ]
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "dynamic-import-node",
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
