--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-dynamic-import-node": "^1.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
@@ -44,11 +47,13 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.25.0",
     "imagemin-webpack-plugin": "^1.4.4",
+    "jest": "^18.1.0",
     "postcss": "^5.2.8",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
     "postcss-loader": "^1.2.1",
     "progress-bar-webpack-plugin": "^1.9.2",
+    "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
@@ -65,7 +70,9 @@
     "compile:production": "cross-env NODE_ENV=production webpack --env.production",
     "build": "npm run compile:production -s && npm run minify -s",
     "analyze": "cross-env NODE_ENV=production webpack --env.analyze",
-    "minify": "babili dist -d dist --no-comments"
+    "minify": "babili dist -d dist --no-comments",
+    "test": "cross-env NODE_ENV=test jest --config .jestrc",
+    "test:coverage": "npm run test -s -- --coverage"
   },
   "engines": {
     "node": ">=7.2.1"
