--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,12 @@
 {
   "reportNeedlessDisables": true,
-  "extends": [ "stylelint-config-standard" ],
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-css-modules"
+  ],
   "rules": {
     "at-rule-blacklist": null,
     "at-rule-name-newline-after": "always-multi-line",
-    "at-rule-no-unknown": true,
     "at-rule-no-vendor-prefix": true,
     "at-rule-whitelist": null,
     "block-closing-brace-space-after": "always-single-line",
