--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-client": "^0.7.3",
+    "classnames": "^2.2.5",
     "graphql-tag": "^1.2.3",
     "lodash": "^4.17.4",
     "normalize.css": "^5.0.0",
@@ -56,6 +57,7 @@
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
+    "stylelint-config-css-modules": "^0.1.0",
     "stylelint-config-standard": "^15.0.1",
     "svg-url-loader": "^1.1.1",
     "url-loader": "^0.5.7",
