--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ node_js:
 cache:
   yarn: true
 env:
-  - NODE_ENV=production
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 script:
   - yarn run test
