--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "build": "npm run compile:production -s && npm run minify -s",
     "analyze": "cross-env NODE_ENV=production webpack --env.analyze",
     "minify": "babili dist -d dist --no-comments",
-    "lint": "npm run lint:eslint && npm run lint:stylelint",
+    "lint": "npm run lint:eslint & npm run lint:stylelint",
     "lint:eslint": "eslint --cache . || exit 0",
     "lint:stylelint": "stylelint **/src/**/*.css || exit 0",
     "test": "cross-env NODE_ENV=test jest --config .jestrc",
