--- a/.stylelintrc
+++ b/.stylelintrc
@@ -9,22 +9,13 @@
     "at-rule-name-newline-after": "always-multi-line",
     "at-rule-no-vendor-prefix": true,
     "at-rule-whitelist": null,
-    "block-closing-brace-space-after": "always-single-line",
-    "block-closing-brace-space-before": "always-single-line",
-    "block-no-single-line": true,
-    "block-opening-brace-newline-before": null,
-    "block-opening-brace-space-after": "always-single-line",
-    "block-opening-brace-space-before": "always",
     "color-named": "never",
     "color-no-hex": true,
     "comment-word-blacklist": null,
     "custom-media-pattern": null,
-    "custom-property-no-outside-root": null,
     "custom-property-pattern": null,
     "declaration-block-no-duplicate-properties": true,
-    "declaration-block-no-ignored-properties": true,
     "declaration-block-no-redundant-longhand-properties": [ true, { "ignoreShorthands": [ "font", "background" ] } ],
-    "declaration-block-properties-order": null,
     "declaration-block-semicolon-newline-before": null,
     "declaration-no-important": null,
     "declaration-property-unit-blacklist": null,
@@ -45,19 +36,14 @@
     "media-feature-name-blacklist": null,
     "media-feature-name-no-vendor-prefix": true,
     "media-feature-name-whitelist": null,
-    "media-feature-no-missing-punctuation": true,
     "media-query-list-comma-newline-before": null,
-    "no-browser-hacks": true,
     "no-descending-specificity": true,
     "no-duplicate-selectors": true,
-    "no-indistinguishable-colors": [ true, { "threshold": 1 } ],
     "no-unknown-animations": true,
-    "no-unsupported-browser-features": [ true, { "browsers": "last 2 Chrome versions, last 2 Firefox versions, last 1 Safari version" } ],
     "number-max-precision": 4,
     "property-blacklist": null,
     "property-no-vendor-prefix": true,
     "property-whitelist": null,
-    "root-no-standard-properties": true,
     "selector-attribute-operator-blacklist": null,
     "selector-attribute-operator-whitelist": null,
     "selector-attribute-quotes": "always",
@@ -70,7 +56,6 @@
     "selector-nested-pattern": null,
     "selector-no-attribute": null,
     "selector-no-combinator": null,
-    "selector-no-empty": true,
     "selector-no-id": true,
     "selector-no-qualifying-type": [ true, { "ignore": [ "attribute" ] } ],
     "selector-no-type": null,
@@ -78,11 +63,9 @@
     "selector-no-vendor-prefix": true,
     "selector-pseudo-class-blacklist": null,
     "selector-pseudo-class-whitelist": null,
-    "selector-root-no-composition": true,
     "selector-type-no-unknown": true,
     "string-quotes": "double",
-    "stylelint-disable-reason": null,
-    "time-no-imperceptible": true,
+    "time-min-milliseconds": 100,
     "unit-blacklist": null,
     "unit-whitelist": null,
     "value-keyword-case": "lower",
