rework project structure to be more scalable, WIP on feed app

--- a/.jestrc
+++ b/.jestrc
@@ -33,5 +33,9 @@
   "notify": true,
   "resetMocks": true,
   "resetModules": true,
-  "testRegex": "\\.test\\.js$"
+  "testRegex": "\\.test\\.js$",
+  "transform": {
+    "\\.(gql|graphql)$": "jest-transform-graphql",
+    ".*": "babel-jest"
+  }
 }
