--- a/.eslintrc
+++ b/.eslintrc
@@ -108,7 +108,7 @@
     "no-useless-return": "error",
     "no-void": "error",
     "no-var": "error",
-    "no-warning-comments": "error",
+    "no-warning-comments": "off",
     "no-with": "error",
     "array-bracket-spacing": [ "error", "always" ],
     "array-callback-return": "off",
@@ -121,7 +121,7 @@
     "brace-style": [ "error", "1tbs", { "allowSingleLine": true } ],
     "callback-return": "off",
     "camelcase": [ "error", { "properties": "never" } ],
-    "capitalized-comments": [ "error", "never" ],
+    "capitalized-comments": "off",
     "class-methods-use-this": "error",
     "comma-dangle": "error",
     "comma-spacing": "error",
