--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "classnames": "^2.2.5",
     "graphql-tag": "^1.2.3",
     "lodash": "^4.17.4",
-    "normalize.css": "^5.0.0",
+    "moment": "~2.17.1",
+    "normalizr": "~3.2.1",
+    "purecss": "~0.6.2",
     "react": "^15.4.1",
     "react-apollo": "^0.8.1",
     "react-dom": "^15.4.1",
@@ -23,7 +25,8 @@
     "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4"
+    "reselect": "^2.5.4",
+    "uuid": "~3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -49,6 +52,7 @@
     "html-webpack-plugin": "^2.25.0",
     "imagemin-webpack-plugin": "^1.4.4",
     "jest": "^18.1.0",
+    "jest-transform-graphql": "~1.0.0",
     "postcss": "^5.2.8",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
