--- a/.eslintrc
+++ b/.eslintrc
@@ -182,6 +182,7 @@
     "prefer-const": "error",
     "prefer-destructuring": "off",
     "prefer-numeric-literals": "off",
+    "prefer-promise-reject-errors": "off",
     "prefer-rest-params": "error",
     "prefer-spread": "error",
     "prefer-template": "error",
@@ -205,6 +206,7 @@
     "strict": "off",
     "symbol-description": "error",
     "template-curly-spacing": [ "error", "always" ],
+    "template-tag-spacing": [ "error", "never" ],
     "unicode-bom": [ "error", "never" ],
     "valid-jsdoc": "off",
     "vars-on-top": "off",
@@ -223,6 +225,8 @@
 
     "react/display-name": "off",
     "react/forbid-component-props": "error",
+    "react/forbid-elements": "off",
+    "react/forbid-foreign-prop-types": "error",
     "react/forbid-prop-types": "off",
     "react/no-array-index-key": "error",
     "react/no-children-prop": "error",
@@ -243,6 +247,7 @@
     "react/sort-comp": "off",
     "react/sort-prop-types": "off",
     "react/style-prop-object": "error",
+    "react/void-dom-elements-no-children": "error",
     "react/jsx-boolean-value": "error",
     "react/jsx-closing-bracket-location": [ "error", "after-props" ],
     "react/jsx-curly-spacing": [ "error", "always" ],
