--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "sunstorymvp",
   "license": "MIT",
   "dependencies": {
-    "apollo-client": "~0.7.3",
+    "apollo-client": "~0.8.7",
     "classnames": "~2.2.5",
     "graphql-tag": "~1.2.3",
     "lodash": "~4.17.4",
@@ -14,61 +14,62 @@
     "normalizr": "~3.2.1",
     "purecss": "~0.6.2",
     "react": "~15.4.1",
-    "react-apollo": "~0.8.1",
+    "react-apollo": "~0.11.1",
     "react-dom": "~15.4.1",
-    "react-helmet": "~3.3.0",
+    "react-helmet": "~4.0.0",
     "react-redux": "~5.0.1",
     "react-router": "~3.0.1",
     "react-router-redux": "~4.0.7",
     "redux": "~3.6.0",
     "redux-actions": "~1.2.0",
-    "redux-logger": "~2.7.4",
+    "redux-logger": "~2.8.1",
     "redux-promise": "~0.5.3",
-    "redux-thunk": "~2.1.0",
+    "redux-thunk": "~2.2.0",
     "reselect": "~2.5.4",
     "uuid": "~3.0.1"
   },
   "devDependencies": {
-    "babel-core": "~6.21.0",
+    "babel-core": "~6.23.1",
     "babel-eslint": "~7.1.1",
     "babel-jest": "~18.0.0",
-    "babel-loader": "~6.2.10",
+    "babel-loader": "~6.3.2",
     "babel-plugin-dynamic-import-node": "~1.0.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "~6.22.0",
-    "babel-polyfill": "~6.20.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "~6.23.0",
+    "babel-polyfill": "~6.23.0",
     "babel-preset-env": "~1.1.4",
-    "babel-preset-react": "~6.16.0",
-    "babel-preset-stage-0": "~6.16.0",
+    "babel-preset-react": "~6.23.0",
+    "babel-preset-stage-0": "~6.22.0",
     "babili": "~0.0.9",
     "clean-webpack-plugin": "~0.1.14",
+    "concurrently": "~3.3.0",
     "cross-env": "~3.1.4",
     "css-loader": "~0.26.1",
     "css-mqpacker": "~5.0.1",
-    "eslint": "~3.12.2",
-    "eslint-plugin-node": "~3.0.5",
-    "eslint-plugin-react": "~6.8.0",
+    "eslint": "~3.15.0",
+    "eslint-plugin-node": "~4.0.1",
+    "eslint-plugin-react": "~6.10.0",
     "extract-text-webpack-plugin": "~2.0.0-rc.2",
-    "file-loader": "~0.9.0",
-    "html-webpack-plugin": "~2.25.0",
+    "file-loader": "~0.10.0",
+    "html-webpack-plugin": "~2.28.0",
     "imagemin-webpack-plugin": "~1.4.4",
     "jest": "~18.1.0",
     "jest-transform-graphql": "~1.0.0",
     "jscpd": "~0.6.10",
-    "postcss": "~5.2.8",
+    "postcss": "~5.2.14",
     "postcss-cssnext": "~2.9.0",
-    "postcss-import": "~9.0.0",
-    "postcss-loader": "~1.2.1",
+    "postcss-import": "~9.1.0",
+    "postcss-loader": "~1.3.1",
     "progress-bar-webpack-plugin": "~1.9.2",
     "react-test-renderer": "~15.4.2",
     "style-loader": "~0.13.1",
-    "stylelint": "~7.8.0",
+    "stylelint": "~7.9.0",
     "stylelint-config-css-modules": "~0.1.0",
     "stylelint-config-standard": "~16.0.0",
-    "svg-url-loader": "~1.1.1",
+    "svg-url-loader": "~2.0.2",
     "url-loader": "~0.5.7",
     "webpack": "~2.2.0",
-    "webpack-bundle-analyzer": "~2.2.1",
-    "webpack-dev-server": "~2.2.0",
+    "webpack-bundle-analyzer": "~2.3.0",
+    "webpack-dev-server": "~2.4.0",
     "webpack-notifier": "~1.5.0"
   },
   "scripts": {
@@ -79,7 +80,7 @@
     "analyze:bundle": "cross-env NODE_ENV=production webpack --env.analyze",
     "analyze:copypaste": "jscpd --limit 5",
     "minify": "babili dist -d dist --no-comments",
-    "lint": "npm run lint:eslint -s & npm run lint:stylelint -s",
+    "lint": "concurrently 'npm run lint:eslint -s' 'npm run lint:stylelint -s'",
     "lint:eslint": "eslint --cache .",
     "lint:stylelint": "stylelint **/src/**/*.css",
     "test": "cross-env NODE_ENV=test jest --config .jestrc",
