--- a/.eslintrc
+++ b/.eslintrc
@@ -139,7 +139,7 @@
     "func-call-spacing": [ "error", "never" ],
     "func-names": "off",
     "func-name-matching": "error",
-    "func-style": [ "error", "expression", { "allowArrowFunctions": true } ],
+    "func-style": "off",
     "generator-star-spacing": [ "error", "after" ],
     "global-require": "off",
     "guard-for-in": "error",
@@ -188,7 +188,7 @@
     "prefer-template": "error",
     "quote-props": [ "error", "as-needed" ],
     "quotes": [ "error", "single" ],
-    "radix": "off",
+    "radix": "error",
     "require-await": "error",
     "require-jsdoc": "off",
     "rest-spread-spacing": [ "error", "never" ],
@@ -224,7 +224,7 @@
     "node/no-unsupported-features": "off",
 
     "react/display-name": "off",
-    "react/forbid-component-props": "error",
+    "react/forbid-component-props": "off",
     "react/forbid-elements": "off",
     "react/forbid-foreign-prop-types": "error",
     "react/forbid-prop-types": "off",
