--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "graphql-tag": "~1.2.3",
     "lodash": "~4.17.4",
     "moment": "~2.17.1",
+    "normalize.css": "~5.0.0",
     "normalizr": "~3.2.1",
-    "purecss": "~0.6.2",
     "react": "~15.4.1",
     "react-apollo": "~0.11.1",
     "react-dom": "~15.4.1",
