--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "css-loader": "~0.26.1",
     "css-mqpacker": "~5.0.1",
     "eslint": "~3.15.0",
-    "eslint-plugin-node": "~4.0.1",
+    "eslint-plugin-babel": "~4.0.1",
     "eslint-plugin-react": "~6.10.0",
     "extract-text-webpack-plugin": "~2.0.0-rc.2",
     "file-loader": "~0.10.0",
