--- a/.eslintrc
+++ b/.eslintrc
@@ -76,7 +76,7 @@
     "no-restricted-imports": "off",
     "no-restricted-modules": "off",
     "no-restricted-properties": "off",
-    "no-restricted-syntax": [ "error", "FunctionDeclaration" ],
+    "no-restricted-syntax": "off",
     "no-return-assign": "error",
     "no-return-await": "error",
     "no-script-url": "error",
@@ -97,7 +97,7 @@
     "no-unneeded-ternary": "error",
     "no-unsafe-negation": "error",
     "no-unused-expressions": [ "error", { "allowShortCircuit": true } ],
-    "no-use-before-define": "error",
+    "no-use-before-define": [ "error", { "functions": false } ],
     "no-useless-call": "error",
     "no-useless-computed-key": "error",
     "no-useless-concat": "error",
@@ -229,8 +229,8 @@
     "react/no-children-prop": "error",
     "react/no-danger": "error",
     "react/no-danger-with-children": "error",
-    "react/no-did-mount-set-state": [ "error", "disallow-in-func" ],
-    "react/no-did-update-set-state": [ "error", "disallow-in-func" ],
+    "react/no-did-mount-set-state": "off",
+    "react/no-did-update-set-state": "error",
     "react/no-multi-comp": [ "error", { "ignoreStateless": true } ],
     "react/no-set-state": "off",
     "react/no-string-refs": "error",
