--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-apollo": "~0.13.0",
     "react-dom": "~15.4.1",
     "react-helmet": "~4.0.0",
+    "react-markdown": "~2.4.5",
     "react-redux": "~5.0.1",
     "react-router": "~3.0.1",
     "react-router-redux": "~4.0.7",
