--- a/package.json
+++ b/package.json
@@ -5,6 +5,21 @@
   "repository": "git@github.com:sunstorymvp/playground.git",
   "author": "sunstorymvp",
   "license": "MIT",
+  "scripts": {
+    "start:development": "cross-env NODE_ENV=development webpack-dev-server --progress --env.development",
+    "compile:development": "cross-env NODE_ENV=development webpack --progress --env.development",
+    "compile:production": "cross-env NODE_ENV=production webpack --progress --env.production",
+    "build": "npm run compile:production -s && npm run minify -s",
+    "analyze:bundle": "cross-env NODE_ENV=production webpack --env.analyze",
+    "analyze:copypaste": "jscpd --limit 5",
+    "minify": "babili dist -d dist --no-comments",
+    "lint": "concurrently 'npm run lint:eslint -s' 'npm run lint:stylelint -s'",
+    "lint:eslint": "eslint --cache .",
+    "lint:stylelint": "stylelint **/src/**/*.css",
+    "test": "cross-env NODE_ENV=test jest --config .jestrc",
+    "test:watch": "npm run test -s -- --watch",
+    "test:coverage": "npm run test -s -- --coverage"
+  },
   "dependencies": {
     "apollo-client": "~0.9.0",
     "classnames": "~2.2.5",
@@ -60,7 +75,6 @@
     "postcss-cssnext": "~2.9.0",
     "postcss-import": "~9.1.0",
     "postcss-loader": "~1.3.1",
-    "progress-bar-webpack-plugin": "~1.9.2",
     "react-test-renderer": "~15.4.2",
     "style-loader": "~0.13.1",
     "stylelint": "~7.9.0",
@@ -72,21 +86,6 @@
     "webpack-bundle-analyzer": "~2.3.0",
     "webpack-dev-server": "~2.4.0",
     "webpack-notifier": "~1.5.0"
-  },
-  "scripts": {
-    "start:development": "cross-env NODE_ENV=development webpack-dev-server --hot --env.development",
-    "compile:development": "cross-env NODE_ENV=development webpack --env.development",
-    "compile:production": "cross-env NODE_ENV=production webpack --env.production",
-    "build": "npm run compile:production -s && npm run minify -s",
-    "analyze:bundle": "cross-env NODE_ENV=production webpack --env.analyze",
-    "analyze:copypaste": "jscpd --limit 5",
-    "minify": "babili dist -d dist --no-comments",
-    "lint": "concurrently 'npm run lint:eslint -s' 'npm run lint:stylelint -s'",
-    "lint:eslint": "eslint --cache .",
-    "lint:stylelint": "stylelint **/src/**/*.css",
-    "test": "cross-env NODE_ENV=test jest --config .jestrc",
-    "test:watch": "npm run test -s -- --watch",
-    "test:coverage": "npm run test -s -- --coverage"
   },
   "engines": {
     "node": ">=6.9.1"
