--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "css-mqpacker": "~5.0.1",
     "eslint": "~3.15.0",
     "eslint-plugin-babel": "~4.0.1",
+    "eslint-plugin-compat": "~1.0.2",
     "eslint-plugin-react": "~6.10.0",
     "extract-text-webpack-plugin": "~2.1.0",
     "file-loader": "~0.10.0",
