--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "~2.18.1",
     "normalize.css": "~6.0.0",
     "normalizr": "~3.2.1",
+    "prop-types": "~15.5.8",
     "react": "~15.5.4",
     "react-apollo": "~1.0.0",
     "react-dom": "~15.5.4",
