--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "analyze:copypaste": "jscpd --limit 5",
     "minify": "babili dist -d dist --no-comments",
     "lint": "concurrently 'npm run lint:eslint -s' 'npm run lint:stylelint -s'",
-    "lint:eslint": "eslint --cache .",
-    "lint:stylelint": "stylelint **/src/**/*.css",
-    "test": "cross-env NODE_ENV=test jest --config .jestrc",
+    "lint:eslint": "eslint --cache --max-warnings=0 .",
+    "lint:stylelint": "stylelint **/src/**/*.css --cache",
+    "test": "cross-env NODE_ENV=test jest",
     "test:watch": "npm run test -s -- --watch",
     "test:coverage": "npm run test -s -- --coverage"
   },
@@ -28,9 +28,9 @@
     "moment": "~2.18.1",
     "normalize.css": "~7.0.0",
     "normalizr": "~3.2.1",
-    "react-apollo": "~1.2.0",
     "prop-types": "~15.5.8",
     "react": "~15.5.4",
+    "react-apollo": "~1.2.0",
     "react-dom": "~15.5.4",
     "react-helmet": "~5.0.2",
     "react-markdown": "~2.5.0",
@@ -62,6 +62,8 @@
     "cross-env": "~4.0.0",
     "css-loader": "~0.28.0",
     "css-mqpacker": "~6.0.0",
+    "enzyme": "~3.1.0",
+    "enzyme-to-json": "~3.1.2",
     "eslint": "~3.19.0",
     "eslint-plugin-babel": "~4.1.1",
     "eslint-plugin-compat": "~1.0.2",
@@ -69,6 +71,7 @@
     "extract-text-webpack-plugin": "~2.1.0",
     "file-loader": "~0.11.0",
     "html-webpack-plugin": "~2.28.0",
+    "identity-obj-proxy": "~3.0.0",
     "imagemin-webpack-plugin": "~1.4.4",
     "jest": "~19.0.2",
     "jest-transform-graphql": "~2.0.0",
@@ -84,17 +87,12 @@
     "stylelint-config-standard": "~16.0.0",
     "svg-url-loader": "~2.0.2",
     "url-loader": "~0.5.7",
-    "webpack-bundle-analyzer": "~2.6.0",
     "webpack": "~2.5.0",
+    "webpack-bundle-analyzer": "~2.6.0",
     "webpack-dev-server": "~2.4.0",
     "webpack-notifier": "~1.5.0"
   },
-  "greenkeeper": {
-    "ignore": [
-      "react-router"
-    ]
-  },
   "engines": {
-    "node": ">=6.9.1"
+    "node": ">=8.2.1"
   }
 }
