replace babili with uglifyjs

--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "author": "sunstorymvp",
   "license": "MIT",
   "scripts": {
-    "start:development": "cross-env NODE_ENV=development webpack-dev-server --progress --env.development",
-    "compile:development": "cross-env NODE_ENV=development webpack --progress --env.development",
-    "compile:production": "cross-env NODE_ENV=production webpack --progress --env.production",
-    "build": "npm run compile:production -s && npm run minify -s",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --env.development",
+    "build": "cross-env NODE_ENV=production webpack --env.production",
     "analyze:bundle": "cross-env NODE_ENV=production webpack --env.analyze",
     "analyze:copypaste": "jscpd --limit 5",
-    "minify": "babili dist -d dist --no-comments",
     "lint": "concurrently 'npm run lint:eslint -s' 'npm run lint:stylelint -s'",
     "lint:eslint": "eslint --cache --max-warnings=0 .",
     "lint:stylelint": "stylelint **/src/**/*.css --cache",
@@ -56,7 +53,6 @@
     "babel-preset-env": "~1.4.0",
     "babel-preset-react": "~6.24.1",
     "babel-preset-stage-0": "~6.24.1",
-    "babili": "~0.0.9",
     "clean-webpack-plugin": "~0.1.14",
     "concurrently": "~3.4.0",
     "cross-env": "~4.0.0",
@@ -86,6 +82,7 @@
     "stylelint-config-css-modules": "~0.1.0",
     "stylelint-config-standard": "~16.0.0",
     "svg-url-loader": "~2.0.2",
+    "uglifyjs-webpack-plugin": "~1.0.0-beta.3",
     "url-loader": "~0.5.7",
     "webpack": "~2.5.0",
     "webpack-bundle-analyzer": "~2.6.0",
