--- a/package.json
+++ b/package.json
@@ -18,28 +18,21 @@
     "test:coverage": "npm run test -s -- --coverage"
   },
   "dependencies": {
-    "apollo-client": "~1.2.1",
     "classnames": "~2.2.5",
-    "graphql-tag": "~1.2.3",
     "lodash": "~4.17.4",
     "moment": "~2.18.1",
     "normalize.css": "~7.0.0",
-    "normalizr": "~3.2.1",
     "prop-types": "~15.5.8",
     "react": "~15.5.4",
-    "react-apollo": "~1.2.0",
     "react-dom": "~15.5.4",
     "react-helmet": "~5.0.2",
-    "react-markdown": "~2.5.0",
     "react-redux": "~5.0.1",
     "react-router": "~3.0.1",
     "react-router-redux": "~4.0.7",
     "redux": "~3.6.0",
     "redux-actions": "~2.0.1",
     "redux-logger": "~3.0.0",
-    "redux-promise": "~0.5.3",
     "redux-thunk": "~2.2.0",
-    "reselect": "~3.0.0",
     "uuid": "~3.1.0"
   },
   "devDependencies": {
@@ -57,7 +50,6 @@
     "concurrently": "~3.4.0",
     "cross-env": "~4.0.0",
     "css-loader": "~0.28.0",
-    "css-mqpacker": "~6.0.0",
     "enzyme": "~3.1.0",
     "enzyme-to-json": "~3.1.2",
     "eslint": "~3.19.0",
@@ -70,7 +62,6 @@
     "identity-obj-proxy": "~3.0.0",
     "imagemin-webpack-plugin": "~1.4.4",
     "jest": "~19.0.2",
-    "jest-transform-graphql": "~2.0.0",
     "jscpd": "~0.6.10",
     "postcss": "~6.0.0",
     "postcss-cssnext": "~2.10.0",
@@ -83,6 +74,7 @@
     "stylelint-config-standard": "~16.0.0",
     "svg-url-loader": "~2.0.2",
     "uglifyjs-webpack-plugin": "~1.0.0-beta.3",
+    "unused-files-webpack-plugin": "~3.0.2",
     "url-loader": "~0.5.7",
     "webpack": "~2.5.0",
     "webpack-bundle-analyzer": "~2.6.0",
