update linters dependencies

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -26,7 +26,6 @@
     "font-weight-notation": "numeric",
     "function-blacklist": null,
     "function-comma-newline-before": null,
-    "function-url-data-uris": null,
     "function-url-no-scheme-relative": null,
     "function-url-quotes": "always",
     "function-url-scheme-whitelist": null,
@@ -54,12 +53,12 @@
     "selector-max-compound-selectors": 4,
     "selector-max-specificity": null,
     "selector-nested-pattern": null,
-    "selector-no-attribute": null,
-    "selector-no-combinator": null,
-    "selector-no-id": true,
+    "selector-max-attribute": null,
+    "selector-max-combinators": null,
+    "selector-max-id": 0,
+    "selector-max-type": null,
+    "selector-max-universal": null,
     "selector-no-qualifying-type": [ true, { "ignore": [ "attribute" ] } ],
-    "selector-no-type": null,
-    "selector-no-universal": null,
     "selector-no-vendor-prefix": true,
     "selector-pseudo-class-blacklist": null,
     "selector-pseudo-class-whitelist": null,
