--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "es6": true,
     "browser": true,
     "node": true,
-    "jasmine": true
+    "jest": true
   },
   "plugins": [
     "babel",
@@ -18,11 +18,6 @@
     "eslint:recommended",
     "plugin:react/recommended"
   ],
-  "settings": {
-    "polyfills": [
-      "fetch"
-    ]
-  },
   "rules": {
     "no-alert": "error",
     "no-array-constructor": "error",
