--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --env.development",
     "build": "cross-env NODE_ENV=production webpack --env.production",
     "analyze:bundle": "cross-env NODE_ENV=production webpack --env.analyze",
-    "analyze:copypaste": "jscpd --limit 5",
-    "lint": "concurrently 'npm run lint:eslint -s' 'npm run lint:stylelint -s'",
-    "lint:eslint": "eslint --cache --max-warnings=0 .",
-    "lint:stylelint": "stylelint **/src/**/*.css --cache",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:watch": "npm run test -s -- --watch",
-    "test:coverage": "npm run test -s -- --coverage"
+    "test": "concurrently 'npm run test:lint -s' 'npm run test:ui -s' 'npm run test:copypaste -s'",
+    "test:ui": "cross-env NODE_ENV=test jest",
+    "test:coverage": "npm run test -s -- --coverage",
+    "test:copypaste": "jscpd --limit 5",
+    "test:lint": "concurrently 'npm run test:lint:eslint -s' 'npm run test:lint:stylelint -s'",
+    "test:lint:eslint": "eslint --cache --max-warnings=0 .",
+    "test:lint:stylelint": "stylelint **/src/**/*.css --cache",
+    "prepush": "npm run test"
   },
   "dependencies": {
     "classnames": "~2.2.5",
@@ -59,6 +60,7 @@
     "extract-text-webpack-plugin": "~2.1.0",
     "file-loader": "~0.11.0",
     "html-webpack-plugin": "~2.28.0",
+    "husky": "~0.14.3",
     "identity-obj-proxy": "~3.0.0",
     "imagemin-webpack-plugin": "~1.4.4",
     "jest": "~19.0.2",
