--- a/package.json
+++ b/package.json
@@ -37,50 +37,51 @@
     "uuid": "~3.1.0"
   },
   "devDependencies": {
-    "babel-core": "~6.24.0",
+    "babel-core": "~6.26.0",
     "babel-eslint": "~8.0.1",
     "babel-jest": "~20.0.0",
-    "babel-loader": "~7.0.0",
-    "babel-plugin-dynamic-import-node": "~1.0.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "~6.24.0",
-    "babel-polyfill": "~6.23.0",
-    "babel-preset-env": "~1.4.0",
+    "babel-loader": "~7.1.2",
+    "babel-plugin-dynamic-import-node": "~1.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.0",
+    "babel-polyfill": "~6.26.0",
+    "babel-preset-env": "~1.6.0",
     "babel-preset-react": "~6.24.1",
     "babel-preset-stage-0": "~6.24.1",
-    "clean-webpack-plugin": "~0.1.14",
-    "concurrently": "~3.4.0",
-    "cross-env": "~4.0.0",
-    "css-loader": "~0.28.0",
+    "cache-loader": "~1.1.0",
+    "clean-webpack-plugin": "~0.1.17",
+    "concurrently": "~3.5.0",
+    "cross-env": "~5.1.0",
+    "css-loader": "~0.28.7",
     "enzyme": "~3.1.0",
     "enzyme-to-json": "~3.1.2",
     "eslint": "~4.9.0",
     "eslint-plugin-babel": "~4.1.2",
     "eslint-plugin-compat": "~2.0.1",
     "eslint-plugin-react": "~7.4.0",
-    "extract-text-webpack-plugin": "~2.1.0",
-    "file-loader": "~0.11.0",
-    "html-webpack-plugin": "~2.28.0",
+    "extract-text-webpack-plugin": "~3.0.1",
+    "file-loader": "~1.1.5",
+    "html-webpack-plugin": "~2.30.1",
     "husky": "~0.14.3",
     "identity-obj-proxy": "~3.0.0",
-    "imagemin-webpack-plugin": "~1.4.4",
+    "imagemin-webpack-plugin": "~1.5.2",
     "jest": "~19.0.2",
     "jscpd": "~0.6.10",
-    "postcss": "~6.0.0",
-    "postcss-cssnext": "~2.10.0",
-    "postcss-import": "~9.1.0",
-    "postcss-loader": "~2.0.3",
+    "postcss": "~6.0.13",
+    "postcss-cssnext": "~3.0.2",
+    "postcss-import": "~11.0.0",
+    "postcss-loader": "~2.0.8",
     "react-test-renderer": "~15.5.4",
-    "style-loader": "~0.17.0",
+    "style-loader": "~0.19.0",
     "stylelint": "~8.2.0",
     "stylelint-config-css-modules": "~1.1.0",
     "stylelint-config-standard": "~17.0.0",
-    "svg-url-loader": "~2.0.2",
+    "svg-url-loader": "~2.2.0",
     "uglifyjs-webpack-plugin": "~1.0.0-beta.3",
     "unused-files-webpack-plugin": "~3.0.2",
-    "url-loader": "~0.5.7",
-    "webpack": "~2.5.0",
-    "webpack-bundle-analyzer": "~2.6.0",
-    "webpack-dev-server": "~2.4.0",
+    "url-loader": "~0.6.2",
+    "webpack": "~3.7.1",
+    "webpack-bundle-analyzer": "~2.9.0",
+    "webpack-dev-server": "~2.9.2",
     "webpack-notifier": "~1.5.0"
   },
   "engines": {
