--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "concurrently 'npm run test:lint -s' 'npm run test:ui -s' 'npm run test:copypaste -s'",
     "test:ui": "cross-env NODE_ENV=test jest",
     "test:coverage": "npm run test -s -- --coverage",
-    "test:copypaste": "jscpd --limit 5",
+    "test:copypaste": "jscpd",
     "test:lint": "concurrently 'npm run test:lint:eslint -s' 'npm run test:lint:stylelint -s'",
     "test:lint:eslint": "eslint --cache --max-warnings=0 .",
     "test:lint:stylelint": "stylelint **/src/**/*.css --cache",
@@ -66,7 +66,7 @@
     "identity-obj-proxy": "~3.0.0",
     "imagemin-webpack-plugin": "~1.5.2",
     "jest": "~21.2.1",
-    "jscpd": "~0.6.10",
+    "jscpd": "~0.6.15",
     "postcss": "~6.0.13",
     "postcss-cssnext": "~3.0.2",
     "postcss-import": "~11.0.0",
