--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   },
   "dependencies": {
     "classnames": "~2.2.5",
+    "history": "~4.7.2",
     "normalize.css": "~7.0.0",
     "prop-types": "~15.5.8",
     "react": "~15.5.4",
     "react-dom": "~15.5.4",
     "react-helmet": "~5.0.2",
     "react-redux": "~5.0.1",
-    "react-router": "~3.0.1",
-    "react-router-redux": "~4.0.7",
+    "react-router-dom": "~4.2.2",
+    "react-router-redux": "~5.0.0-alpha.6",
     "redux": "~3.6.0",
     "redux-actions": "~2.0.1",
     "redux-logger": "~3.0.0",
